tests/toy/neg/001363_mutation.toylang
program a = { var a : bool; else } .
